updated pom.xml file for new unit tests